--- a/style.css
+++ b/style.css
@@ -164,9 +164,14 @@ body
     height: auto;
     width: 350px;
     border-radius: 50%;
-    margin-top: -10px;
+    margin-top: -30px;
 
 }
+.pic:hover{
+  transform: scale(1.1);
+ }
+   
+
 
 
 
